- fix for using an unknown type upon an unknown type follwed by a Match
- addition of matrix_tsv reader. Can be used to parse e.g. microarray files
- update tutorial documentation

0.1.14
- blacklist numpy 1.6.0 (http://projects.scipy.org/numpy/ticket/1870)

0.1.15
- bug fix in determining which parent dims a dependent dims depends on
- Argsort/Rank now do not take missing attribute from input slice
- add transposer optimization step. Currently optimizes some filter/group/.. operations on matrices with nested vectors 
  that depend only on one dimension of the matrix.

0.1.16
- language debug / log support
- update some outdated urls
- work around some numpy inefficiencies
- add Import as alias for Read

0.1.17
- Windows newline support in tsv parser, and allow overriding delimiter choice
- Fix bug in Filter optimization introduced in 0.1.16
- To command can now handle multiple slices simultaneously
- Rename(fieldname=('f1','f2')) type of command now supported to rename multiple slices with same name
- Similar support for Cast
- Handle distributions in which the 'python' interpreter is mapped to python 3.x (assumes 'python2' exists in those cases)
- Handle errors where develop directory is created, but develop scripts fails


0.1.18
- Add warning for old numpy versions
- Changed names of db connection functions to start with uppercase (Query, Store, Drop)
- Added handling for special db types
- Fixed free query support
- Fixed store support
- Added file_db command to Get  (use Get.file_db('my_database.db'))
- Get string functions do not work for string9, rename Get.string. to Get.string8. Support for string9 will come later.

0.1.19
- Added a primitive format detection.
- Fixed gz unpacking
- Added FASTA read support
- Allow user to add custom formats
- Add Detect function, to determine unknown types, and cast e.g. string types to integers where possible
- Add allow_convert option ([default] False) incorporating Detect functionality in Rep